Fix green contrast for unread tooltip messages

--- a/common/common.scss
+++ b/common/common.scss
@@ -16,7 +16,8 @@ ol.category-breadcrumb li {
 }
 
 .badge-notification.new-posts,
-.badge-notification.unread-posts {
+.badge-notification.unread-posts,
+.d-header .icons .unread-notifications {
 	background-color: #019245;
 }
 
